--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <a class="addthis_counter addthis_pill_style"></a>
         </div>
         <!-- AddThis Button END -->
-        <p>Brought to you by <a href="http://charliestigler.com" target="_blank">Charlie Stigler</a> and <a href="http://visitsteve.com" target="_blank">Steve Lambert</a>.</p>
+        <p>Brought to you by <a href="http://charliestigler.com" target="_blank">Charlie Stigler</a> of <a href="http://www.zaption.com" target="_blank">Zaption</a> and <a href="http://visitsteve.com" target="_blank">Steve Lambert</a>.</p>
 				<p>Translations thanks to Lukas Bestle, Paul Ishii, Cynthia Lawson, Heather Rasley, Tian Zheng, and ilTofa.
 				Contributions from others are always welcome.</p>
         <p>Licensed under the <a href="http://www.gnu.org/copyleft/gpl.html" target="_blank">GNU GPL</a>. View and contribute to the code at <a href="https://github.com/slambert/selfcontrol/" target="_blank">GitHub</a>.</p>
